tests/compile_fail/private_submodule_path.rs
use ledgerful::impact::packet::changed_file::ChangedFile;

fn main() {
    let _ = ChangedFile::default();
}
